delete the arrow

--- a/index.html
+++ b/index.html
@@ -1052,23 +1052,23 @@
             <div class="careselectiona" id="careselectiona">
               <div class="selectiona careFamily">
                 <a href="#" id="rely" class="linktitle" style="color:#ff8585">Rely on Family and Friends</a>
-                <div class="ar1" id="arc" style="background-color:#ff8585;"></div>
+                <!-- <div class="ar1" id="arc" style="background-color:#ff8585;"></div> -->
               </div>
               <div class="selectiona careHealth">
                 <a href="#" id="talk" class="linktitle" style="color:#ffaeae;">Talk to a Health Care Professional</a>
-                <div class="ar1" id="ard" style="background-color:#ffaeae;"></div>
+                <!-- <div class="ar1" id="ard" style="background-color:#ffaeae;"></div> -->
               </div>
               <div class="selectiona caregroup">
                 <a href="#" id="join" class="linktitle" style="color:#ffaeae;">Join a Support Group</a>
-                <div class="ar1" id="are" style="background-color:#ffaeae;"></div>
+                <!-- <div class="ar1" id="are" style="background-color:#ffaeae;"></div> -->
               </div>
               <div class="selectiona careWellness">
                 <a href="#" id="focus" class="linktitle" style="color:#ffaeae;">Focus on Wellness</a>
-                <div class="ar1" id="arf" style="background-color:#ffaeae;"></div>
+                <!-- <div class="ar1" id="arf" style="background-color:#ffaeae;"></div> -->
               </div>
               <div class="selectiona careTake">
                 <a href="#" id="take" class="linktitle" style="color:#ffaeae;">Take Medications after Talking to Your Health Care Provider </a>
-                <div class="ar1" id="arg" style="background-color:#ffaeae;"></div>
+                <!-- <div class="ar1" id="arg" style="background-color:#ffaeae;"></div> -->
               </div>
               <div id="tooltip4">
                 <a href="#">
@@ -1153,13 +1153,13 @@
                 <div class="sa">
                   <a href="#" id="husband" class="linktitle" style="color:#ff8585">As a husband or partner</a>
                 </div>
-                <div class="ar1" id="arh" style="background-color:#ff8585;"></div>
+                <!-- <div class="ar1" id="arh" style="background-color:#ff8585;"></div> -->
               </div>
               <div class="select-b carefriends">
                 <div class="sa">
                   <a href="#" id="friends" class="linktitle" style="color:#ffaeae;">As a friends or family Member</a>
                 </div>
-                <div class="ar1" id="arff"></div>
+                <!-- <div class="ar1" id="arff"></div> -->
               </div>
             </div>
             <div id="tooltip5">
@@ -1250,10 +1250,10 @@
       <footer>
         <p id="footerp">&copy;2014 Jiaying Li, All Rights Reserved. Journey provides information for educational purposes only,and does not provide medical advice, diagnosis or treatment. </p>
       </footer>
-      <nav id="mainnav" class="ui navigation off-screen">
+      <!-- <nav id="mainnav" class="ui navigation off-screen">
         <a class="tab prev" id="prev" href="#"></a>
         <a class="tab next" id="next" href="#"></a>
-      </nav>
+      </nav> -->
       <!-- logo -->
       <div id="logo">
         <a href="#" target="_self" onClick="journey.goscreen('welcome')">
